--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 Ricoshade/.vs/Ricoshade/v15/Server/sqlite3/storage.ide-shm
 Ricoshade/.vs/Ricoshade/v15/Server/sqlite3/storage.ide-wal
+Ricoshade/.vs/Ricoshade/v15/Server/sqlite3/storage.ide
+Ricoshade/.vs/Ricoshade/v15/Server/sqlite3/storage.ide-shm
