--- a/Ricoshade/Assembly-CSharp.csproj
+++ b/Ricoshade/Assembly-CSharp.csproj
@@ -64,6 +64,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\BumperScript.cs" />
     <Compile Include="Assets\Scripts\FlipperScript.cs" />
+    <Compile Include="Assets\Scripts\ObstacleDeploy.cs" />
+    <Compile Include="Assets\Scripts\ObstacleGeneration.cs" />
     <Compile Include="Assets\Scripts\ScoreboardScript.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Graphic.SJH519-000W/Documents/GitHub/Semester2Project/Ricoshade/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
