--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.postprocessing": "2.3.0",
     "com.unity.probuilder": "4.2.1",
     "com.unity.purchasing": "2.0.6",
+    "com.unity.render-pipelines.high-definition": "5.16.1-preview",
     "com.unity.render-pipelines.lightweight": "5.16.1",
     "com.unity.shadergraph": "5.16.1",
     "com.unity.textmeshpro": "2.0.1",
