--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,7 @@ ehthumbs.db
 Corridor/Library/ShaderCache/
 Corridor/Library/metadata/
 
-# =================== #
-# HErC's Placeholders #
-# =================== #
-
-*.pptx*
+# FMOD files
+Assets/Plugins/FMOD/Resources/FMODStudioCache.asset
+Assets/StreamingAssets/*.bank
+fmod_editor.log
